# altgraph

./: .gitignore  .hgignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MANIFEST.in  README.rst  README.txt  ReadMe.txt  distribute_setup.py  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml  test.yml
altgraph/: Dot.py  Graph.py  GraphAlgo.py  GraphStat.py  GraphUtil.py  ObjectGraph.py  __init__.py
altgraph_tests/: __init__.py  test_altgraph.py  test_dot.py  test_graph.py  test_graphstat.py  test_graphutil.py  test_object_graph.py
doc/: changelog.rst  conf.py  core.rst  dot.rst  graph.rst  graphalgo.rst  graphstat.rst  graphutil.rst  index.rst  license.rst  objectgraph.rst
doc/_templates/: icons.html
test/: test_altgraph.py
testsuite/: test_altgraph.py
