[x-setup-stub]
distribute-version = 0.6.29

[metadata]
name = altgraph
version = 0.10.2
description = Python graph (network) package
long_description_file = README.txt doc/changelog.rst
maintainer = Ronald Oussoren 
maintainer_email = ronaldoussoren@mac.com
url = http://packages.python.org/altgraph
download_url = http://pypi.python.org/pypi/altgraph
license = MIT
classifiers = 
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 3
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Visualization

zip-safe = 1
platforms = any
packages = altgraph
