[metadata]
name = altgraph
version = 0.11.1
description = Python graph (network) package
long_description_file =
  README.txt
  doc/changelog.rst

maintainer = Ronald Oussoren
maintainer_email = ronaldoussoren@mac.com
url = http://packages.python.org/altgraph
download_url = http://pypi.python.org/pypi/altgraph
license = MIT
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Visualization

platforms = any
packages = altgraph
